# spike-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Inputs_9L9T/: FileList.txt  FilterParameters.txt  Summary.html
Inputs_9L9T/Filtered/L_image_1_1.flt/: L_image_1_1.2.0.0.gbo  L_image_1_1.2.0.180.gbo  L_image_1_1.2.90.0.gbo  L_image_1_1.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_1_2.flt/: L_image_1_2.2.0.0.gbo  L_image_1_2.2.0.180.gbo  L_image_1_2.2.90.0.gbo  L_image_1_2.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_1_3.flt/: L_image_1_3.2.0.0.gbo  L_image_1_3.2.0.180.gbo  L_image_1_3.2.90.0.gbo  L_image_1_3.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_2_1.flt/: L_image_2_1.2.0.0.gbo  L_image_2_1.2.0.180.gbo  L_image_2_1.2.90.0.gbo  L_image_2_1.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_2_2.flt/: L_image_2_2.2.0.0.gbo  L_image_2_2.2.0.180.gbo  L_image_2_2.2.90.0.gbo  L_image_2_2.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_2_3.flt/: L_image_2_3.2.0.0.gbo  L_image_2_3.2.0.180.gbo  L_image_2_3.2.90.0.gbo  L_image_2_3.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_3_1.flt/: L_image_3_1.2.0.0.gbo  L_image_3_1.2.0.180.gbo  L_image_3_1.2.90.0.gbo  L_image_3_1.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_3_2.flt/: L_image_3_2.2.0.0.gbo  L_image_3_2.2.0.180.gbo  L_image_3_2.2.90.0.gbo  L_image_3_2.2.90.180.gbo
Inputs_9L9T/Filtered/L_image_3_3.flt/: L_image_3_3.2.0.0.gbo  L_image_3_3.2.0.180.gbo  L_image_3_3.2.90.0.gbo  L_image_3_3.2.90.180.gbo
Inputs_9L9T/Filtered/T_image_1_1.flt/: T_image_1_1.2.0.0.gbo  T_image_1_1.2.0.180.gbo  T_image_1_1.2.90.0.gbo  (+1 more)
(+32 files in other folders)
